--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -84,51 +84,13 @@
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="114dp"
-        android:layout_height="188dp"
+        android:layout_width="116dp"
+        android:layout_height="193dp"
         android:layout_marginEnd="43dp"
         android:layout_marginBottom="22dp"
         android:text="@string/manual"
         app:layout_constraintBottom_toTopOf="@+id/main_logout_btn"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/main_light_btn"
-        android:layout_width="186dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="105dp"
-        android:text="@string/light"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button8"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_time_btn" />
-
-    <Button
-        android:id="@+id/main_time_btn"
-        android:layout_width="186dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginEnd="25dp"
-        android:text="@string/time"
-        app:layout_constraintBottom_toTopOf="@+id/main_light_btn"
-        app:layout_constraintEnd_toStartOf="@+id/button8"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_temp_btn" />
-
-    <Button
-        android:id="@+id/main_temp_btn"
-        android:layout_width="186dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="155dp"
-        android:layout_marginEnd="25dp"
-        android:text="@string/temperature"
-        app:layout_constraintBottom_toTopOf="@+id/main_time_btn"
-        app:layout_constraintEnd_toStartOf="@+id/button8"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_position_txt" />
 
     <Button
         android:id="@+id/main_refresh_btn"
@@ -152,5 +114,34 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_position_txt" />
+
+    <Button
+        android:id="@+id/main_light_btn"
+        android:layout_width="186dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginBottom="22dp"
+        android:text="@string/light"
+        app:layout_constraintBottom_toTopOf="@+id/main_refresh_btn"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/main_time_btn"
+        android:layout_width="186dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="43dp"
+        android:text="@string/time"
+        app:layout_constraintBottom_toTopOf="@+id/main_light_btn"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/main_temp_btn"
+        android:layout_width="186dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="43dp"
+        android:text="@string/temperature"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/main_time_btn"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
