--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -83,7 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/main_temp_txt" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/main_manual_btn"
         android:layout_width="116dp"
         android:layout_height="193dp"
         android:layout_marginEnd="43dp"
